# uepm

./: .gitignore  ARCHITECTURE_CHANGES.md  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  index.html  install.ps1  install.sh  package-lock.json  package.json
.github/: README.md
.github/workflows/: publish.yml  release.yml  test.yml
.kiro/specs/init-plugin-support/: design.md  requirements.md  tasks.md
.kiro/specs/uepm/: design.md  requirements.md  tasks.md
.kiro/specs/uepm-website/: design.md  requirements.md  tasks.md
archive/: package-lock.json  package.json
archive/samples/: CLAUDE.md  README.md
archive/samples/project/: README-GitHub-Test.md  package.json  test-github-install.sh
archive/samples/tests/: package.json
archive/scripts/: CLAUDE.md  publish-local.sh
docs/superpowers/plans/: 2026-05-10-plugin-init-interactive-prompts.md  2026-05-11-rust-rewrite-phase1-core-cli.md  2026-05-23-phase2-plugin-authoring-impl.md  2026-05-28-json-output-flag-impl.md  (+1 more)
samples/: README.md
samples/project/: .gitignore  README.md  SampleProject.uproject  package-lock.json  package.json
samples/tests/: package.json  tsconfig.json
scripts/: publish-local.sh  test-publish.sh  test-published-packages.sh
src/: context.rs  errors.rs  installer.rs  lib.rs  lockfile.rs  main.rs  manifest.rs  output.rs  publisher.rs  registry.rs  resolver.rs  uproject.rs
src/commands/: init.rs  install.rs  list.rs  mod.rs  publish.rs  uninstall.rs  update.rs
tests/: install_integration.rs  json_output.rs  publish_integration.rs
(+43 files in other folders)
